# dissertation

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  abstract.tex  acknowledgements.tex  biblio.tex  commands.tex  common_commands.tex  common_configure.tex  common_packages.tex  contents.tex  dedication.tex  dissertation.tex  hyphenation.tex  index.tex  licence.tex  metadata.xmp  mfh.bst  nomenclature.tex  publications.tex  references.bib  title.tex  update_metadata.py  versicherung.tex
.travis/: sshkey_overlay.pub
0_intro/: CMakeLists.txt  chapter.tex  tester.tikz
10_results/: CMakeLists.txt  chapter.tex  convergence_correlation.tex  convergence_hf.tex  convergence_kexp.tex  denoting_cs_basis.tex  sturmian_adc.tex  sturmian_cgto.tex  suggestions_basis_sets.tex
10_results/E_vs_k/: C_n4-l2-m2-summary.yaml  C_n5-l2-m2-summary.yaml  C_n6-l2-m2-summary.yaml  plot.py
10_results/E_vs_nlm/: .gitignore  Be_n10-l1-m1.hdf5  Be_n4-l0-m0.hdf5  Be_n4-l1-m1.hdf5  Be_n6-l1-m1.hdf5  Be_plot_data.yaml  C_n6-l1-m1.hdf5  C_plot_data.yaml  HF_literature.yaml  N_n10-l1-m1.hdf5  N_n4-l1-m1.hdf5  N_n6-l1-m1.hdf5  N_plot_data.yaml  O_n10-l1-m1.hdf5  O_n6-l1-m1.hdf5  O_plot_data.yaml  P_n10-l1-m1.hdf5  P_n5-l1-m1.hdf5  P_n7-l1-m1.hdf5  P_plot_data.yaml  check_numerical_problems.py  compute.py  plot.py
10_results/E_vs_shell/: B_n2-l1-m1.hdf5  B_n6-l5-m5.hdf5  B_results.yaml  Be_n2-l1-m1.hdf5  Be_n6-l5-m5.hdf5  Be_results.yaml  C_n2-l1-m1.hdf5  C_n6-l5-m5.hdf5  C_results.yaml  F_n3-l2-m2.hdf5  compute.py  (+15 more)
13_conclusion/: chapter.tex
15_future/: chapter.tex
1_maths/: chapter.tex
1_qm/: CMakeLists.txt  chapter.tex  correspondence.tex  funcana.tex  hilbert.tex  sobolev.tikz  spectral.tex  takeaway.tex
2_atom/: chapter.tex
2_numeigen/: CMakeLists.txt  chapter.tex  diag_algos.tex  ritz_galerkin.tex
2_qm/: chapter.tex
3_qchem/: CMakeLists.txt  chapter.tex  correlation.tex  dft.tex  excited.tex  fci.tex  fci_matrix.tikz  hf_intro.tex  planetary_systems.tikz  tise.tex
42_appendix/: CMakeLists.txt  appendix.tex  cs_convergence.tex  eri_symmetries.tex  hf_theorem_finite.tex  molsturm_output.tex  rmso_Gaussian.tex
4_solving_hf/: CMakeLists.txt  basis_functions.tex  chapter.tex  functions.tex  functions_cgto.tex  functions_cs.tex  functions_fe.tex  functions_sto.tex  gdm.tikz  guess.tex  plot_fe_grid.py  plot_shape_functions.py  roothaan_oda.tikz  scf_algos.tex  scf_overview.tex  summary.tex
6_contraction_lazy_matrices/: CMakeLists.txt  chapter.tex  contraction.tex  expression_tree.tikz  expression_tree2.tikz  lazy.tex  lazyten_structure.tikz  rhf_code.cpp
8_molsturm/: CMakeLists.txt  chapter.tex  design.tex  examples.tex  molsturm_structure.tikz  need_for_modular.tex  related.tex  state.tex  takeaway.tex
99_acknowledgements/: CMakeLists.txt  list_chaos.tex  list_proof.tex  list_science_debates.tex  main.tex  make_appendix_lists.py
99_appendix/: CMakeLists.txt  appendix.tex  cbs_uhf.tex  cs_convergence.tex  eri_symmetries.tex  molsturm_input.py  molsturm_output.out  rmso_Gaussian.tex
ci/: checkout_overlay.sh  sshkey_overlay.enc
cmake/: ImageConversion.cmake  TexInputs.cmake  convert_tikz.py  make_gitcommit.sh  pdf_to_pdfa_png.sh
(+116 files in other folders)
